--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,4 @@
 {
-  // Exclude generated files
-  "files.exclude": {
-    "**/plonk_vk.sol": true,
-    "**/crates/prisma/src/lib.rs": true
-  },
-  // Formatter settings on save
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "eslint.validate": ["javascript", "javascriptreact"],
-  // Toml settings
-  "evenBetterToml.taplo.configFile.path": ".taplo.toml",
-  // Files linting
-  "files.associations": {
-    ".gas-snapshot": "julia"
-  },
-  // Npm settings
-  "npm.exclude": "**/lib/**",
-  // Typescript settings
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true,
   // File specific settings
   "[solidity]": {
     "editor.defaultFormatter": "JuanBlanco.solidity"
@@ -29,6 +9,29 @@
   "[toml]": {
     "editor.defaultFormatter": "tamasfe.even-better-toml"
   },
+  // Exclude generated files
+  "files.exclude": {
+    "**/plonk_vk.sol": true,
+    "**/crates/prisma/src/lib.rs": true
+  },
+  // Formatter settings on save
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "json",
+    "jsonc",
+    "json5"
+  ],
+  // Toml settings
+  "evenBetterToml.taplo.configFile.path": ".taplo.toml",
+  // Files linting
+  "files.associations": {
+    ".gas-snapshot": "julia"
+  },
+  // Npm settings
+  "npm.exclude": "**/lib/**",
   // Tailwind settings
   // From: https://github.com/joe-bell/cva/discussions/85#discussioncomment-5014769
   "tailwindCSS.experimental.classRegex": [
@@ -38,5 +41,8 @@
     ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
     ["cva\\(((?:[^()]|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
   ],
-  "tailwindCSS.experimental.configFile": "configurations/tailwindcss/src/index.js"
+  "tailwindCSS.experimental.configFile": "configurations/tailwindcss/src/index.js",
+  // Typescript settings
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
