--- a/crates/turbo.json
+++ b/crates/turbo.json
@@ -3,6 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
+      "cache": false,
       "inputs": [
         "**",
         "../.cargo/**",
@@ -14,7 +15,7 @@
         "../rust-toolchain.toml",
         "../rustfmt.toml"
       ],
-      "cache": false
+      "outputs": []
     }
   }
 }
