--- a/packages/background/turbo.json
+++ b/packages/background/turbo.json
@@ -5,19 +5,20 @@
     "build": {
       "dependsOn": ["^build"],
       "env": ["NODE_ENV"],
+      "inputs": ["**"],
       "outputs": [
         "../../ios/LightWalletSafariExtension/Resources/background.js",
         "../../apps/extension/chrome/background.js",
         "../../apps/extension/firefox/background.js"
       ]
     },
+    "clean": {
+      "cache": false
+    },
     "dev": {
       "cache": false,
       "persistent": true
     },
-    "lint": {},
-    "clean": {
-      "cache": false
-    }
+    "lint": {}
   }
 }
