--- a/packages/wagmi/turbo.json
+++ b/packages/wagmi/turbo.json
@@ -2,16 +2,17 @@
   "$schema": "https://turbo.build/schema.json",
   "extends": ["//"],
   "pipeline": {
-    "wagmi": {
-      "outputs": ["src/generated.ts"]
+    "clean": {
+      "cache": false
     },
     "dev": {
       "cache": false,
       "persistent": true
     },
     "lint": {},
-    "clean": {
-      "cache": false
+    "wagmi": {
+      "inputs": ["**"],
+      "outputs": ["src/generated.ts"]
     }
   }
 }
