--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^1.13.1",
+    "swagger-ui-react": "^5.2.0",
     "trpc-openapi": "^1.2.0",
     "zod": "^3.21.4"
   },
@@ -38,6 +39,7 @@
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
+    "@types/swagger-ui-react": "^4.18.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
