--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,7 @@ google-services.json
 *.xcarchive
 
 UserInterfaceState.xcuserstate
+
+# App specific .env
+# https://nextjs.org/docs/pages/building-your-application/configuring/environment-variables
+!apps/*/.env
