fix: prisma undefined

--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -21,6 +21,7 @@
     "**/*.config.cjs",
     "**/*.config.ts",
     "**/*.entitlements",
+    "**/*.env",
     "**/*.gradle",
     "**/*.html",
     "**/*.icns",
