--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           workspace: "@lightdotso/prisma"
   neon-deploy:
-    if: needs.neon-turbo.outputs.trigger == 'true' && github.event_name == 'push'
+    if: needs.neon-turbo.outputs.trigger == 'true' && github.event.pull_request.merged == true
     needs:
       - neon-turbo
     runs-on: ubuntu-latest
@@ -31,10 +31,8 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
-      - name: Get last commit SHA
-        id: get_sha
-        run: |
-          echo sha="${{ github.event.before }}" | cut -c1-8 >> $GITHUB_OUTPUT
+      - name: Node Install
+        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Search branch by name
         id: get_branch_id
         run: |
@@ -44,7 +42,7 @@ jobs:
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${{ secrets.NEON_API_KEY }}" \
             | jq -r .branches \
-            | jq -c '.[] | select(.name | contains("'${{ steps.get_sha.outputs.sha }}'")) .id' \
+            | jq -c '.[] | select(.name | contains("'${{ github.head_ref }}'")) .id' \
             | jq -r \
             ) \
           echo "branch_id=${branch_id}" >> $GITHUB_OUTPUT
@@ -52,7 +50,7 @@ jobs:
         uses: neondatabase/delete-branch-action@v2
         with:
           project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch_id: ${{ steps.get_branch_id.outputs.branch_id }}
+          branch_id: ${{ github.head_ref }}
           api_key: ${{ secrets.NEON_API_KEY }}
       - name: Touch .env
         working-directory: configurations/prisma
@@ -60,9 +58,9 @@ jobs:
           touch .env
           echo DATABASE_URL=${{ secrets.DATABASE_URL }}/neondb >> .env
           echo DIRECT_DATABASE_URL=${{ secrets.DIRECT_DATABASE_URL }}/neondb >> .env
-          npx prisma migrate deploy
+          pnpm run db:migrate:deploy
   neon-deploy-pr:
-    if: needs.neon-turbo.outputs.trigger == 'true' && github.event_name == 'pull_request'
+    if: needs.neon-turbo.outputs.trigger == 'true' && github.event.pull_request.merged == false
     needs:
       - neon-turbo
     runs-on: ubuntu-latest
@@ -72,18 +70,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.BOT_TOKEN }}
-      - name: Get PR sha
-        id: get_pull_request_sha
-        run: |
-          pull_request_sha=$(jq --raw-output .pull_request.base.sha "$GITHUB_EVENT_PATH" | cut -c1-8)
-          echo "pull_request_sha=${pull_request_sha}" >> $GITHUB_OUTPUT
-          echo $pull_request_sha
+      - name: Node Install
+        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Neon Database Create Branch Action
         uses: neondatabase/create-branch-action@v3
         id: create_branch
         with:
           project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch_name: ${{steps.get_pull_request_sha.outputs.pull_request_sha}}
+          branch_name: ${{ github.head_ref }}
           api_key: ${{ secrets.NEON_API_KEY }}
           username: ${{ secrets.PG_USERNAME }}
           password: ${{ secrets.PG_PASSWORD }}
@@ -93,9 +87,8 @@ jobs:
           touch .env
           echo DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler }}/neondb >> .env
           echo DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url }}/neondb >> .env
-          npm install -g zod-prisma
-          npx prisma generate
-          npx prisma migrate deploy
+          pnpm run build
+          pnpm run db:migrate:deploy
       - name: Commit and Push
         uses: stefanzweifel/git-auto-commit-action@v4
   neon-check:
