--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -88,6 +88,7 @@ jobs:
           echo DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler }}/neondb?pgbouncer=true >> .env
           echo DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url }}/neondb >> .env
           pnpm run build
+          pnpm run db:migrate:dev
           pnpm run db:migrate:deploy
       - name: Commit and Push
         uses: stefanzweifel/git-auto-commit-action@v4
