--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -59,7 +59,7 @@ jobs:
           echo DATABASE_URL=${{ secrets.DATABASE_URL }}/neondb >> .env
           echo DIRECT_DATABASE_URL=${{ secrets.DIRECT_DATABASE_URL }}/neondb >> .env
           pnpm run db:migrate:deploy
-  neon-deploy-pr:
+  neon-deploy-preview:
     if: needs.neon-turbo.outputs.trigger == 'true' && github.event.pull_request.merged == false
     needs:
       - neon-turbo
@@ -96,12 +96,12 @@ jobs:
     if: always()
     needs:
       - neon-deploy
-      - neon-deploy-pr
+      - neon-deploy-preview
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: neon-deploy,neon-deploy-pr
+          allowed-skips: neon-deploy,neon-deploy-preview
           jobs: ${{ toJSON(needs) }}
