--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -56,8 +56,8 @@ jobs:
         working-directory: configurations/prisma
         run: |
           touch .env
-          echo DATABASE_URL=${{ secrets.DATABASE_URL }}/neondb >> .env
-          echo DIRECT_DATABASE_URL=${{ secrets.DIRECT_DATABASE_URL }}/neondb >> .env
+          echo DATABASE_URL=${{ secrets.DATABASE_URL }}/neondb?pgbouncer=true&connect_timeout=10 >> .env
+          echo DIRECT_DATABASE_URL=${{ secrets.DIRECT_DATABASE_URL }}/neondb?connect_timeout=10 >> .env
           pnpm run db:migrate:deploy
   neon-deploy-preview:
     if: needs.neon-turbo.outputs.trigger == 'true' && github.event.pull_request.merged == false && github.head_ref != ''
