--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
   pull_request:
+    types:
+      - closed
+      - opened
+      - synchronize
   merge_group:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -85,8 +89,8 @@ jobs:
         working-directory: configurations/prisma
         run: |
           touch .env
-          echo DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler }}/neondb?pgbouncer=true >> .env
-          echo DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url }}/neondb >> .env
+          echo DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler }}/neondb?pgbouncer=true&connect_timeout=10 >> .env
+          echo DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url }}/neondb?connect_timeout=10 >> .env
           pnpm run build
           pnpm run db:migrate:dev
           pnpm run db:migrate:deploy
