--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -82,13 +82,13 @@ jobs:
       - name: Touch .env
         working-directory: configurations/prisma
         run: |
-          touch .env
           pnpm run build
-          echo DATABASE_URL=${{ secrets.DATABASE_URL }}/neondb?pgbouncer=true&connect_timeout=10 >> .env
-          echo DIRECT_DATABASE_URL=${{ secrets.DIRECT_DATABASE_URL }}/neondb?connect_timeout=10 >> .env
           pnpm run db:migrate:deploy
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}/neondb?pgbouncer=true&connect_timeout=10
+          DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}/neondb?connect_timeout=10
   neon-deploy-preview:
-    if: needs.neon-turbo.outputs.trigger == 'true' && github.event.pull_request.merged == false && github.event_name == 'push' || github.event_name == 'pull_request'
+    if: needs.neon-turbo.outputs.trigger == 'true' && github.event.pull_request.merged == false && github.event_name == 'pull_request' || github.event.action.opened == true
     needs:
       - neon-turbo
     runs-on: ubuntu-latest
@@ -112,12 +112,12 @@ jobs:
       - name: Touch .env
         working-directory: configurations/prisma
         run: |
-          touch .env
-          echo DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler }}/neondb?pgbouncer=true&connect_timeout=10 >> .env
-          echo DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url }}/neondb?connect_timeout=10 >> .env
           pnpm run build
           pnpm run db:migrate:dev
           pnpm run db:migrate:deploy
+        env:
+          DATABASE_URL: ${{ steps.create_branch.outputs.db_url_with_pooler }}/neondb?pgbouncer=true&connect_timeout=10
+          DIRECT_DATABASE_URL: ${{ steps.create_branch.outputs.db_url }}/neondb?connect_timeout=10
       - name: Commit and Push
         uses: stefanzweifel/git-auto-commit-action@v4
   neon-check:
