--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -87,8 +87,8 @@ jobs:
           api_key: ${{ secrets.NEON_API_KEY }}
       - name: Remove Vercel Environments
         run: |
-          pnpm vercel env rm PGHOST preview ${{ steps.get_source_branch.outputs.branch }}
-          pnpm vercel env rm DATABASE_URL preview ${{ steps.get_source_branch.outputs.branch }}
+          pnpm vercel env rm PGHOST preview ${{ steps.get_source_branch.outputs.branch }} --token=${{ secrets.VERCEL_TOKEN }}
+          pnpm vercel env rm DATABASE_URL preview ${{ steps.get_source_branch.outputs.branch }} --token=${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -117,7 +117,7 @@ jobs:
       - name: Get Vercel Secrets
         working-directory: configurations/prisma
         run: |
-          pnpm vercel env pull --environment=preview --git-branch=${{ github.head_ref }} .env
+          pnpm vercel env pull --environment=preview --git-branch=${{ github.head_ref }} .env --token=${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
