--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -37,6 +37,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
+      - name: Get source branch
+        id: get_source_branch
+        run: |
+          export LATEST_LOG=$(git log -1 --pretty=%B)
+          export SOURCE_BRANCH=$(echo $LATESTLOG | awk -F '\\\\n' '{print $1}' |  awk -F '/' '{print $2}' | awk '{print $1}')
+          echo branch=$SOURCE_BRANCH  >> $GITHUB_OUTPUT
       - name: Search branch by ref
         id: get_branch_id
         run: |
@@ -46,7 +52,7 @@ jobs:
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${{ secrets.NEON_API_KEY }}" \
             | jq -r .branches \
-            | jq -c '.[] | select(.name | contains("'${{ github.head_ref }}'")) .id' \
+            | jq -c '.[] | select(.name | contains("'${{ steps.get_source_branch.outputs.branch }}'")) .id' \
             | jq -r \
             ) \
           echo "branch_id=${branch_id}" >> $GITHUB_OUTPUT
@@ -79,6 +85,14 @@ jobs:
           project_id: ${{ secrets.NEON_PROJECT_ID }}
           branch_id: ${{ steps.get_merge_branch_id.outputs.branch_id }}
           api_key: ${{ secrets.NEON_API_KEY }}
+      - name: Remove Vercel Environments
+        run: |
+          pnpm vercel env rm PGHOST preview ${{ steps.get_source_branch.outputs.branch }} --token=${{ secrets.VERCEL_TOKEN }}
+          pnpm vercel env rm DATABASE_URL preview ${{ steps.get_source_branch.outputs.branch }} --token=${{ secrets.VERCEL_TOKEN }}
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       - name: Prisma Migrate Deploy
         working-directory: configurations/prisma
         run: |
@@ -100,24 +114,20 @@ jobs:
           token: ${{ secrets.BOT_TOKEN }}
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Neon Database Create Branch Action
-        uses: neondatabase/create-branch-action@v3
-        id: create_branch
-        with:
-          project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch_name: ${{ github.head_ref }}
-          api_key: ${{ secrets.NEON_API_KEY }}
-          username: ${{ secrets.PG_USERNAME }}
-          password: ${{ secrets.PG_PASSWORD }}
+      - name: Get Vercel Secrets
+        working-directory: configurations/prisma
+        run: |
+          pnpm vercel env pull --environment=preview --git-branch=${{ github.head_ref }} .env --token=${{ secrets.VERCEL_TOKEN }}
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       - name: Prisma Migrate Deploy
         working-directory: configurations/prisma
         run: |
           pnpm run build
           pnpm run db:migrate:dev
           pnpm run db:migrate:deploy
-        env:
-          DATABASE_URL: ${{ steps.create_branch.outputs.db_url_with_pooler }}/neondb?pgbouncer=true&connect_timeout=10
-          DIRECT_DATABASE_URL: ${{ steps.create_branch.outputs.db_url }}/neondb?connect_timeout=10
       - name: Commit and Push
         uses: stefanzweifel/git-auto-commit-action@v4
   neon-check:
