--- a/configurations/prisma/package.json
+++ b/configurations/prisma/package.json
@@ -22,8 +22,8 @@
     "prebuild": "npm run generate",
     "build": "pnpm run generate && tsup",
     "clean": "rimraf .turbo node_modules dist",
-    "db:migrate:deploy": "prisma migrate deploy",
-    "db:migrate:dev": "prisma migrate dev",
+    "db:migrate:deploy": "dotenv prisma migrate deploy",
+    "db:migrate:dev": "dotenv prisma migrate dev",
     "db:push": "prisma db push",
     "predev": "npm run generate",
     "dev": "tsup --watch",
