--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.2.1",
     "esbuild": "^0.18.16",
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.12",
