--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -39,22 +39,14 @@ jobs:
           fetch-depth: 2
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Delete Neon Branch
-        uses: neondatabase/delete-branch-action@v3
-        with:
-          project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch: ${{ github.head_ref }}
-          api_key: ${{ secrets.NEON_API_KEY }}
       - name: Previous commit hash
         id: previous_commit_hash
         run: |
           echo "hash=$(git log --pretty=format:%H -n 1 HEAD^) >> $GITHUB_OUTPUT
       - name: Delete Neon Branch
-        uses: neondatabase/delete-branch-action@v3
-        with:
-          project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch: gh-readonly-queue/main/pr-${{ github.event.number }}-${{ steps.previous_commit_hash.outputs.hash }}
-          api_key: ${{ secrets.NEON_API_KEY }}
+        run: |
+          pnpm neonctl branches delete ${{ github.head_ref }} --project-id ${{ secrets.NEON_PROJECT_ID }}
+          pnpm neonctl branches delete gh-readonly-queue/main/pr-${{ github.event.number }}-${{ steps.previous_commit_hash.outputs.hash }} --project-id ${{ secrets.NEON_PROJECT_ID }}
       - name: Remove Vercel Environments
         run: |
           pnpm vercel env rm --yes PGHOST preview ${{ github.head_ref }} --token=${{ secrets.VERCEL_TOKEN }} || true
@@ -87,14 +79,6 @@ jobs:
           token: ${{ secrets.BOT_TOKEN }}
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Get curent branches
-        run: |
-          echo $(curl --silent \
-            "https://console.neon.tech/api/v2/projects/${{ secrets.NEON_PROJECT_ID }}/branches" \
-            --header "Accept: application/json" \
-            --header "Content-Type: application/json" \
-            --header "Authorization: Bearer ${{ secrets.NEON_API_KEY }}" \
-          )
       - name: Get Vercel Secrets
         working-directory: configurations/prisma
         run: |
