--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "husky": "^8.0.3",
     "license-check-and-add": "^4.0.5",
     "lint-staged": "^13.2.3",
+    "neonctl": "^1.18.1",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
     "postcss": "^8.4.27",
