--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
+    "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.16",
