--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@lightdotso/api",
-  "version": "1.1.0-pre.0",
+  "name": "@lightdotso/trpc",
+  "version": "0.0.0",
   "private": false,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
   "bugs": {
@@ -12,13 +12,7 @@
   },
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "postinstall": "pnpm --filter @lightdotso/prisma build",
-    "lint": "next lint",
-    "start": "next start"
-  },
+  "main": "index.ts",
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@trpc-limiter/core": "^0.0.8",
@@ -26,6 +20,7 @@
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
     "next": "^13.4.12",
+    "openapi-types": "^12.1.3",
     "prisma": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,18 +30,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prisma": "workspace:*",
-    "@lightdotso/tailwindcss": "workspace:*",
-    "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.4.4",
-    "@types/react": "^18.2.16",
-    "@types/react-dom": "^18.2.7",
-    "@types/swagger-ui-react": "^4.18.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
   "publishConfig": {
