--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --port 3001",
+    "postinstall": "pnpm --filter @lightdotso/prisma build",
     "lint": "next lint",
     "start": "next start"
   },
