--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,13 +21,16 @@
   "dependencies": {
     "@lightdotso/styles": "workspace:*",
     "@lightdotso/ui": "workspace:*",
+    "@prisma/client": "^5.0.0",
     "next": "^13.4.12",
+    "prisma": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
+    "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.16",
