--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
+    "@lightdotso/prisma": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
