--- a/configurations/prisma/turbo.json
+++ b/configurations/prisma/turbo.json
@@ -4,7 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "env": ["NODE_ENV"],
+      "env": ["DATABASE_URL", "NODE_ENV"],
       "inputs": ["src/**", "prisma/schema.prisma"],
       "outputs": [
         "dist/**",
