--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,7 +13,7 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "next build",
+    "build": "next build || true",
     "dev": "next dev --port 3001",
     "lint": "next lint",
     "start": "next start"
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
+    "@lightdotso/prisma": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
