--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "abitype": "^0.9.5",
     "autoprefixer": "^10.4.14",
     "chai": "^4.3.7",
+    "checkly": "^4.0.12",
     "commitlint": "^17.6.7",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
