--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -15,6 +15,10 @@
       "cache": false,
       "persistent": true
     },
-    "lint": {}
+    "lint": {},
+    "test": {
+      "dependsOn": ["build"],
+      "env": ["ENVIRONMENT_URL", "NODE_ENV"]
+    }
   }
 }
